--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -89,7 +89,7 @@
     }
 
     img {
-      width: 110%;
+      width: 100%;
       height: 250px;
       object-fit: cover;
       right: 0;
@@ -120,7 +120,7 @@
   .toggle {
     display: flex;
     margin: 50px 0 20px 0;
-    overflow: scroll;
+    overflow-x: auto;
 
     @media (min-width: 730px) {
       overflow: visible;
