--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -100,6 +100,17 @@ a:hover {
   color: var(--text-primary);
 }
 
+/* Focus visible styles for keyboard navigation */
+:focus-visible {
+  outline: 2px solid var(--text-primary);
+  outline-offset: 2px;
+  border-radius: 2px;
+}
+
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
 h1 {
   margin: 10px 0 5px;
   font-size: 30px;
